[package]
name = "koru-kafe"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "client", "runtime", "tcp", "stream"] }
mime_guess = "2.0.4"
bytes = "1.4.0"
directories = "5.0.1"
yaml-rust = "0.4.5"
serde = "1.0.164"
serde_derive = "1.0.164"
radix_trie = "0.2.1"
lazy_static = "1.4.0"
async-trait = "0.1.69"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
env_logger = "0.10.0"
log = "0.4.19"
httpdate = "1.0.2"
mime = "0.3.17"
hyper-tungstenite = "0.10.0"
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"

[dev-dependencies]
tokio-test = "0.4.2"
