[package]
name = "koru-kafe"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
http-body-util = "^0.1"
hyper-util = { version = "^0.1", features = ["full"] }
mime_guess = "^2"
directories = "^6"
yaml-rust = "^0.4"
serde = "^1"
serde_derive = "^1"
radix_trie = "^0.2"
lazy_static = "^1"
async-trait = "^0.1"
tokio-rustls = "^0.26"
rustls-pemfile = "^2"
env_logger = "^0.11"
log = "^0.4"
httpdate = "^1"
mime = "^0.3"
tokio-websockets = { version = "^0.12", features = ["client", "server", "ring", "rand"] }
futures-util = { version = "^0.3", features = ["sink"] }
http = "^1"
sha1 = "^0.10"
digest = "^0.10"
data-encoding = "^2"
argh = "^0.1"

[dev-dependencies]
tokio-test = "^0.4"

[profile.release]
strip = true
lto = true
panic = 'abort'
